<resources>
    <string name="app_name">Lucky Number App</string>
    <string name="welcome_to_lucky_number_app">Welcome to Lucky Number App</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="wish_me_a_luck">Wish me a luck</string>
    <string name="your_lucky_number_is">Your Lucky Number is:</string>
    <string name="_0">0</string>
    <string name="share_my_lucky_number">Share my Lucky Number</string>
    <string name="_888">888</string>
</resources>